# hinata_lite_aime_reader

./: .gitignore  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  main.py  pyproject.toml  ruff.toml
aime_card/: __init__.py  cli.py  constants.py  hinata_hid.py  nfc_reader.py  pn532.py  udev.py
