[project]
name = "hinata-lite-aime-reader"
version = "1.0.0"
description = "HINATA Lite NFC 讀卡器的 Aime 卡讀寫工具"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "NH3andH2O" }]
dependencies = [
    "hidapi>=0.14.0",
]

[project.scripts]
hinata-aime = "aime_card.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aime_card"]
